tests/golden/openshift/external-secrets-operator/external-secrets-operator/10_helm_chart/external-secrets/templates/cert-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/metrics: cert-controller
    app.kubernetes.io/name: external-secrets-cert-controller
    app.kubernetes.io/version: v2.12.0
    helm.sh/chart: external-secrets-2.12.0
  name: external-secrets-cert-controller
  namespace: syn-external-secrets-operator
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets-cert-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/metrics: cert-controller
        app.kubernetes.io/name: external-secrets-cert-controller
        app.kubernetes.io/version: v2.12.0
        helm.sh/chart: external-secrets-2.12.0
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - certcontroller
            - --crd-requeue-interval=5m
            - --service-name=external-secrets-webhook
            - --service-namespace=syn-external-secrets-operator
            - --secret-name=external-secrets-webhook
            - --secret-namespace=syn-external-secrets-operator
            - --metrics-addr=:8080
            - --healthz-addr=:8081
            - --loglevel=info
            - --zap-time-encoding=epoch
            - --enable-partial-cache=true
          image: ghcr.io/external-secrets/external-secrets:v2.12.0
          imagePullPolicy: IfNotPresent
          name: cert-controller
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 8081
              name: ready
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: ready
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      hostNetwork: false
      serviceAccountName: external-secrets-cert-controller
