tests/golden/openshift/external-secrets-operator/external-secrets-operator/10_helm_chart/external-secrets/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/metrics: webhook
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v2.12.0
    helm.sh/chart: external-secrets-2.12.0
  name: external-secrets-webhook
  namespace: syn-external-secrets-operator
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets-webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/metrics: webhook
        app.kubernetes.io/name: external-secrets-webhook
        app.kubernetes.io/version: v2.12.0
        helm.sh/chart: external-secrets-2.12.0
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - webhook
            - --port=10250
            - --dns-name=external-secrets-webhook.syn-external-secrets-operator.svc
            - --cert-dir=/tmp/certs
            - --check-interval=5m
            - --metrics-addr=:8080
            - --healthz-addr=:8081
            - --loglevel=info
            - --zap-time-encoding=epoch
          image: ghcr.io/external-secrets/external-secrets:v2.12.0
          imagePullPolicy: IfNotPresent
          name: webhook
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 10250
              name: webhook
              protocol: TCP
            - containerPort: 8081
              name: ready
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: ready
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp/certs
              name: certs
              readOnly: true
      hostNetwork: false
      serviceAccountName: external-secrets-webhook
      volumes:
        - name: certs
          secret:
            secretName: external-secrets-webhook
