tests/golden/openshift/external-secrets-operator/external-secrets-operator/10_helm_chart/external-secrets/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/version: v2.12.0
    helm.sh/chart: external-secrets-2.12.0
  name: external-secrets-metrics
  namespace: syn-external-secrets-operator
spec:
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/name: external-secrets
  type: ClusterIP
