tests/golden/openshift/external-secrets-operator/external-secrets-operator/10_helm_chart/external-secrets/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v0.20.4
    external-secrets.io/component: webhook
    helm.sh/chart: external-secrets-0.20.4
  name: external-secrets-webhook
  namespace: syn-external-secrets-operator
spec:
  ports:
    - name: webhook
      port: 443
      protocol: TCP
      targetPort: webhook
  selector:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/name: external-secrets-webhook
  type: ClusterIP
